:sparkles: | add the serialization